name:                mvnMods
version:             0.1.0.0
synopsis:            Tool to visualize module structure of maven project
homepage:            https://github.com/jhrcek/haskell-snipets/mvnMods
license:             PublicDomain
license-file:        LICENSE
author:              Jan Hrcek
maintainer:          jhrcek@redhat.com
build-type:          Simple
cabal-version:       >=1.10

executable mvnMods
  main-is:             Main.hs
  other-modules:       Showdot
  ghc-options:         -Wall
  build-depends:       base >=4.8,
                       containers >=0.5,
                       directory >=1.2,
                       filepath >=1.3,
                       hxt >=9.3,
                       process >=1.2,
                       graphviz >= 2999.17
  default-language:    Haskell2010
